===============
Stalker Changes
===============

0.2.0.b7
========

* **SOM**:

  * **Update:** **Task.schedule_constraint** is now reflected to the tjp file
    correctly.

* **WebUI:**

  * **Fix:** GanttChart  view of Assets, Shots,Sequences or Tasks now displays
    only the children and parents of that Task derivative.
  * **Update:** Task create/update dialog now displays the full hierarchy in
    parent/dependent task listings.
  * **Fix:** TimeLog create/update dialog now displays the default times
    correctly when creating a new TimeLog.
  * **Fix:** TimeLog create/update view callables are now checking if there
    will be any OverBookedError raised.
  * **JQueryGantt:**
  
    * **Update:** Context menu is now visible in ``taskRow`` (grid editor).

0.2.0.b6
========

* **SOM**:
  
  * **Fix:** Fixed **LocalSession._write_data()**, previously it was not
    creating the local session folder.
  * **New:** Added a new method called **LocalSession.delete()** to remove the
    local session file.
  * **Update:** **Link.full_path** can now be set to an empty string. This is
    updated in this way for **Version** class.
  * **Update:** Updated the formatting of **SimpleEntity.nice_name**, it is now
    possible to have uppercase letters and camel case format will be preserved.
  * **Update**: **Version.take_name** formatting is enhanced.
  * **New**: **Task** class is now mixed in with **ReferenceMixin** making it
    unnecessary to have **Asset**, **Shot** and **Sequence** classes all mixed
    in individually. Thus removed the **ReferenceMixin** from **Asset**,
    **Shot** and **Sequence** classes.
  * **Update**: Added **Task.schedule_model** validation and its tests.
  * **New**: Added **ScheduleMixin.total_seconds** and
    **ScheduleMixin.computed_total_seconds**.

  **WebUI**:

  * **New**: Added 'duration' field to TimeLog's List dgrid.

0.2.0.b5
========

* **SOM**:

  * **New:** **Version** class now has two new attributes called ``parent`` and